--- a/Ecommerse/Client/Shared/ProductList.razor
+++ b/Ecommerse/Client/Shared/ProductList.razor
@@ -10,12 +10,12 @@ else
     {
         <li class="oi-media-pause my-3">
             <div class="media-img-wrapper mr-2">
-                <a href="#">
+                <a href="/products/@product.id">
                     <img class="media-img" src="@product.ImageUrl" alt="@product.title"/>
                 </a>
             </div>
             <div class="media-body">
-                <a href="#">
+                <a href="/products/@product.id">
                     <h4 class="mb-0">@product.title</h4>
 
                 </a>
