--- a/Ecommerse/Client/wwwroot/css/app.css
+++ b/Ecommerse/Client/wwwroot/css/app.css
@@ -62,3 +62,8 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+.price {
+    color: forestgreen;
+}
